force-app/main/default/objects/User_Auth__mdt/User_Auth__mdt.object-meta.xml
<CustomObject>
    <label>User Auth</label>
    <pluralLabel>User Auths</pluralLabel>
</CustomObject>