force-app/main/default/objects/User_Auth__mdt/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <description>Access Token</description>
    <label>Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>