force-app/main/default/objects/User_Auth__mdt/fields/Refresh__c.field-meta.xml
<CustomField>
    <fullName>Refresh__c</fullName>
    <description>Refresh Token</description>
    <label>Refresh</label>
    <length>255</length>
    <type>Text</type>
</CustomField>