force-app/main/default/objects/User_Auth__mdt/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <label>Salesforce User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>