force-app/main/default/objects/User_Auth__mdt/fields/Strava_User__c.field-meta.xml
<CustomField>
    <fullName>Strava_User__c</fullName>
    <description>Strava User ID</description>
    <label>Strava User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>